# MeanFi

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .ninja_deps  .ninja_log  .pre-commit-config.yaml  .qt-research-project  .skbuild-info.json  ADAPTIVE_QUADRATURE_REUSE.md  AGENTS.md  AUTHORS.md  CHANGELOG.md  CMakeCache.txt  CMakeInit.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark.ipynb  benchmark.py  build.ninja  cmake_install.cmake  custom_grid.ipynb  demo.ipynb  demo.py  hubbard_1d_playground.ipynb  noxfile.py  pixi.toml  pyproject.toml  pytest.ini  setup  superconducting_tutorial.py
analysis/: coarse_k_point_implementation.ipynb  graphene_test_extended_hubbard.ipynb  mean_field_demo.ipynb  scipy_optimizer.ipynb
analysis/data/: graphene_example.nc
benchmarks/: benchmark_2d_af_hubbard.py
codes/: coarse_k_point_implementation.ipynb  hf.py  interface.py  kwant_examples.py  mf.py  model.py  observables.py  prep_no_int_test.py  scipy_optimizer.ipynb  solvers.py  test.py  test_graphene.py  test_hubbard.py  utils.py
codes/kwant_helper/: kwant_examples.py  utils.py
codes/params/: matrixShaping.py  param_transforms.py  rparams.py  test.py  test_params.py
codes/tb/: tb.py  test.py  test_tb.py  transforms.py  utils.py
codes/tests/: test_graphene.py  test_hat.py  test_hubbard.py  test_params.py  test_tb.py  test_zero_hint.py
cpp/: CMakeLists.txt
cpp/zero_temp/include/: adaptive_integrator.h  geometry.h  simplex_rules.h  tight_binding.h  types.h  vertex_cache.h
cpp/zero_temp/src/: adaptive_integrator.cpp  bindings.cpp  geometry.cpp  simplex_rules.cpp  tight_binding.cpp  types.cpp  vertex_cache.cpp
docs/: environment.yml
docs/source/: CHANGELOG.md  algorithm.md  conf.py  graphene_example.md  hubbard_1d.md  index.md  mf_details.md  mf_notes.md
docs/source/documentation/: algorithm.md  meanfi.md  mf_notes.md  pymf.md
docs/source/tutorial/: glide_symmetry.md  graphene_example.md  hubbard_1d.md  pwave_superconductivity.md  strained_graphene.md  superconducting_1d.md  superconducting_2d.md  superconducting_2d.py  superconducting_tutorial.py
examples/: 1d_hubbard.ipynb  1d_hubbard_totalenergy.ipynb  demo-sc.py  demo.py  diatomic_molecule.ipynb  dict_to_flat.py  graphene_extended_hubbard.ipynb  kspace_potential.ipynb  mexican_hat.ipynb  tEnergyTest.ipynb  testInterface.ipynb
examples/data/: 1d_hubbard_example.nc  diatomic_molecule_example.nc  graphene_example.nc  graphene_test.nc  kspace_potential.nc
meanfi/: DIIS.py  __init__.py  _bdg.py  _finite_temp.py  _info.py  _validation.py  _version.py  _zero_dim.py  bdg.py  costcommutator.py  integration.py  meanfield.py  mf.py  model.py  observables.py  prova_comm.ipynb  results.py  scf.py  solvers.py  zero_temp.py
meanfi/_scf/: __init__.py  engine.py
meanfi/core/: __init__.py  filling.py  matrix.py  results.py  validation.py
meanfi/density/: __init__.py  density.py  filling.py  plan.py  problem.py  results.py
meanfi/density/integrate/: __init__.py  bdg.py  common.py  defaults.py  integrate.py  methods.py  normal.py  uniform.py  workspace.py
meanfi/density/kpoint/: __init__.py  kpoint.py  occupations.py  zero_dim.py
meanfi/integrate/: __init__.py  common.py  defaults.py  density_support.py  dispatch.py  families.py  filling.py  fixed_filling.py  methods.py  simplex.py  uniform.py  uniform_grid.py  zero_dim.py
meanfi/integrate/engines/: __init__.py  bdg.py  (+1 more)
meanfi/interop/: __init__.py  kwant.py
meanfi/kwant_helper/: kwant_examples.py  utils.py
meanfi/normal/: __init__.py  meanfield.py
meanfi/params/: param_transforms.py  rparams.py
meanfi/physics/: __init__.py  bdg.py  meanfield.py
meanfi/scf/: __init__.py  bdg.py  engine.py  fixed_point.py  info.py  methods.py  normal.py  scf.py
meanfi/space/: __init__.py  bdg.py  coordinates.py  density_selection.py  hermitian.py  interaction_selection.py  normal.py  params.py  particlehole.py  reducers.py  selection.py  space.py  support.py  symmetry.py
meanfi/state/: __init__.py  bdg.py  keys.py  normal.py  support.py
meanfi/superconducting/: __init__.py  bdg.py  density.py  scf.py
meanfi/tb/: __init__.py  _backend.py  _native.py  backend.py  bdg.py  ops.py  storage.py  tb.py  transforms.py  utils.py  validate.py
meanfi/tests/: conftest.py  helpers.py  test_fixed_filling_density.py  test_fixed_filling_solver.py  test_graphene.py  test_hat.py  test_hubbard.py  test_kwant.py  test_minimization.py  test_params.py  test_performance_smoke.py  test_physical_validity.py  test_random_tb.py  test_scalar_mu.py  test_solvers.py  test_stateful_density_1d.py  test_stateful_solver.py  test_tb.py  test_zero_hint.py  test_zero_temp.py
notes/: README.md
performance/: __init__.py
performance/_shared/: __init__.py  common.py  plots.py  scenarios.py
performance/benchmarks/: density_scaling.py  scf_scaling.py
performance/profiling/: bdg_matrix_function_comparison.py  chiral_square_pwave_demo.py  hubbard_1d_density.py  hubbard_1d_scf.py  qwz_2d_density.py
profiling/: compare_main_vs_quadrature.md  compare_main_vs_quadrature.py  graphene.py  hubbard_1d_density.py  hubbard_1d_scf.py  qwz_2d_density.py
pymf/: __init__.py  mf.py  model.py  observables.py  solvers.py
pymf/kwant_helper/: kwant_examples.py  utils.py
pymf/params/: param_transforms.py  rparams.py
pymf/tb/: tb.py  transforms.py  utils.py
pymf/tests/: test_graphene.py  test_hat.py  test_hubbard.py  test_params.py  test_tb.py  test_zero_hint.py
src/: _zero_temp_native.cpp
src/zero_temp/: adaptive_integrator.cpp  adaptive_integrator.h  bindings.cpp  geometry.cpp  geometry.h  native_charge.cpp  native_charge.h  native_density.cpp  native_density.h  native_frontier.cpp  native_frontier.h  native_geometry.cpp  native_geometry.h  native_simplex_cache.cpp  native_simplex_cache.h  native_spectral_cache.cpp  native_spectral_cache.h  native_tight_binding.cpp  native_tight_binding.h  native_types.cpp  native_types.h  simplex_rules.cpp  simplex_rules.h  tight_binding.cpp  tight_binding.h  types.cpp  types.h  vertex_cache.cpp  vertex_cache.h
(+113 files in other folders)
