[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "meanfi"
dynamic = ["version"]
authors = [
  {name="MeanFi developers"},
]
description = "Package to perform self-consistent mean-field calculations on tight-binding systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "kwant>=1.4",
    "packaging>=22.0",  # For version parsing
]
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "meanfi/_version.py"

[project.urls]
"Documentation" = "https://meanfi.readthedocs.io/en/latest/"
"Repository" = "https://gitlab.kwant-project.org/qt/meanfi"
"Bug Tracker" = "https://gitlab.kwant-project.org/qt/meanfi/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["meanfi"]

[tool.hatch.build.targets.sdist]
include = [
  "meanfi",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "AUTHORS.md",
]

[tool.codespell]
skip = "*.ipynb, *.cls,*.bst,*.bib,*.lock"
ignore-words-list = "multline, ket, bra, braket, nwo, mater"

[tool.pixi.project]
name = "scattering-hotis"
version = "0.1.0"
description = "Add a short description here"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-64",  "win-64"] #"osx-arm64",

[tool.pixi.dependencies]
matplotlib-base = ">=3.8.4,<3.9"
scipy = ">=1.14.0,<1.15"
numpy = "*"
ipython = ">=8.22.2,<8.23"
ipykernel = ">=6.29.4,<6.30"
pfapack = ">=0.1.1,<0.2"
adaptive = ">=1.3.0,<1.4"
git = ">=2.33.0"  # To install networkmodels
python-mumps = ">=0.0.2,<0.0.3"
jupytext = ">=1.16.4,<1.17"
cmasher = ">=1.8.0,<2"
svgutils = ">=0.3.4,<0.4"
pybtex = ">=0.24.0,<0.25"
tectonic = "*"
tomlkit = ">=0.13.2,<0.14"
myst-nb = ">=1.1.2,<2"
pytest-cov = ">=6.0.0,<7"
pytest-randomly = ">=3.15.0,<4"
pytest-repeat = ">=0.9.3,<0.10"
pytest = ">=8.3.4,<9"
sparse = ">=0.15"
kwant = ">=1.5.0"
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.pypi-dependencies]
skunk = { git = "https://github.com/akhmerov/skunk.git" }
pytest-ruff = ">=0.4.1,<0.5"

[tool.pixi.target.linux-64.pypi-dependencies]
meanfi = { path = ".", editable = true }

[tool.pixi.target.osx-64.pypi-dependencies]
meanfi = { path = ".", editable = true }

[tool.pixi.target.win-64.pypi-dependencies]
meanfi = { path = ".", editable = true }

[tool.pixi.feature.empty.dependencies]

[tool.pixi.environments]
default = { solve-group = "default" }
empty = { features = ["empty"], no-default-feature = true }
zip = { features = ["zip"], no-default-feature = true }

[tool.pixi.feature.zip.target.linux-64.dependencies]
zip = "*"

[tool.pixi.feature.zip.target.osx-64.dependencies]
zip = ">=3.0,<4"

[tool.pixi.feature.empty.system-requirements]
libc = { family = "unix", version = "0" }

[tool.pixi.feature.precommit.tasks]
git = "git"
pre-commit = "pre-commit"
