[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "meanfi"
dynamic = ["version"]
authors = [
  {name="MeanFi developers"},
]
description = "Package to perform self-consistent mean-field calculations on tight-binding systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "kwant>=1.4",
    "packaging>=22.0",  # For version parsing
]
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "meanfi/_version.py"

[project.urls]
"Documentation" = "https://meanfi.readthedocs.io/en/latest/"
"Repository" = "https://gitlab.kwant-project.org/qt/meanfi"
"Bug Tracker" = "https://gitlab.kwant-project.org/qt/meanfi/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["meanfi"]

[tool.hatch.build.targets.sdist]
include = [
  "meanfi",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "AUTHORS.md",
]

[tool.codespell]
skip = "*.ipynb, *.cls,*.bst,*.bib,*.lock"
ignore-words-list = "multline, ket, bra, braket, nwo, mater"

[tool.pixi.project]
name = "scattering-hotis"
version = "0.1.0"
description = "Add a short description here"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-64",  "win-64"] #"osx-arm64",

[tool.pixi.dependencies]
matplotlib-base = ">=3.8.4,<3.9"
scipy = ">=1.9"
numpy = ">=1.25.0"
kwant = ">=1.4"
git = ">=2.47.1,<3"
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
pytest-randomly = ">=3.15.0,<4"
pytest-regressions = "*"
pytest-repeat = ">=0.9.3,<0.10"
ruff = ">=0.9.6,<0.10"

[tool.pixi.feature.test.pypi-dependencies]
pytest-ruff = ">=0.4.1,<0.5"

[tool.pixi.feature.precommit.dependencies]
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.feature.docs.dependencies]
myst-nb = ">=1.1.2,<2"
sphinx-togglebutton = "*"
sphinx-copybutton = "*"
make = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinx-tippy = "*"
sphinx-book-theme = ">=1.1.0"

[tool.pixi.feature.minimal.dependencies]
python = "~=3.10"
numpy = "~=1.25.0"
scipy = "~=1.9"
kwant = "~=1.4"

[tool.pixi.feature.mid.dependencies]
python = "~=3.11"
numpy = "~=1.24"
scipy = "~=1.10"
kwant = "~=1.4"

[tool.pixi.feature.latest.dependencies]
python = "~=3.12"
numpy = ">=1.26"
scipy = ">=1.13"
kwant = ">=1.4"

[tool.pixi.feature.publish.dependencies]
hatch = ">=1.7.0,<1.13"
hatch-vcs = ">=0.4.0,<0.5"

[tool.pixi.feature.profiler.dependencies]
pyinstrument = "*"

[tool.pixi.feature.profiler.pypi-dependencies]
memray = "*"

[tool.pixi.pypi-dependencies]
meanfi = { path = ".", editable = true }

[tool.pixi.feature.empty.dependencies]

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "mid" }
profiler = { features = ["profiler", "mid"], solve-group = "mid" }
minimal = { features = ["minimal", "test"], solve-group = "minimal" }
mid = { features = ["mid", "test"], solve-group = "mid" }
latest = { features = ["latest", "test"], solve-group = "default" }
precommit = { features = ["precommit"], no-default-feature = true }
publish = { features = ["publish"], no-default-feature = true }
empty = { features = ["empty"], no-default-feature = true }
zip = { features = ["zip"], no-default-feature = true }

[tool.pixi.feature.test.tasks]
tests = "pytest -W error -W ignore:ast.NameConstant:DeprecationWarning"

[tool.pixi.tasks]
tests-minimal = "pixi run -e minimal tests"
tests-mid = "pixi run -e mid tests"
tests-latest = "pixi run -e latest tests"
tests-all = { depends-on = ["tests-minimal", "tests-mid", "tests-latest"] }

[tool.pixi.feature.docs.tasks]
docs-build = "python -c \"from matplotlib import pyplot\" && make -C docs/ html SPHINXOPTS=\"-WT --keep-going -n\""

[tool.pixi.feature.profiler.tasks]
profiler = "python profiling/graphene.py && memray stats memoryProfile.bin && memray summary memoryProfile.bin"

[tool.pixi.feature.precommit.tasks]
git = "git"
pre-commit = "pre-commit"

[tool.pixi.feature.publish.tasks]
build = "hatch build"
publish = "hatch publish -u __token__"

[tool.pixi.feature.zip.target.linux-64.dependencies]
zip = "*"

[tool.pixi.feature.zip.target.osx-64.dependencies]
zip = ">=3.0,<4"

[tool.pixi.feature.empty.system-requirements]
libc = { family = "unix", version = "0" }
