[build-system]
requires = [
    "hatchling>=1.27",
]
build-backend = "hatchling.build"

[project]
name = "meanfi"
dynamic = ["version"]
authors = [
  {name="MeanFi developers"},
]
description = "Package to perform self-consistent mean-field calculations on tight-binding systems"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "adaptivesimplex @ git+https://gitlab.kwant-project.org/qt/adaptivesimplex.git@main",
    "numpy>=2.0",
    "packaging>=22.0",
    "stateful-quadrature>=0.2.1",
]

[tool.hatch.version]
path = "meanfi/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/meanfi",
  "/examples",
  "/performance",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/AUTHORS.md",
]

[project.urls]
"Documentation" = "https://meanfi.readthedocs.io/en/latest/"
"Repository" = "https://gitlab.kwant-project.org/qt/meanfi"
"Bug Tracker" = "https://gitlab.kwant-project.org/qt/meanfi/-/issues"

[project.optional-dependencies]
kwant = ["kwant>=1.4"]
accel = []

[tool.ruff]
cache-dir = "build/test-reports/.ruff_cache"

[tool.codespell]
skip = "*.ipynb, *.cls,*.bst,*.bib,*.lock"
ignore-words-list = "multline, ket, bra, braket, nwo"

[tool.pixi.workspace]
requires-pixi = ">=0.62.0"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-64", "win-64", "osx-arm64"]

[tool.pixi.dependencies]
matplotlib-base = ">=3.8.4,<3.9"
numpy = ">=2.0"
eigen = ">=3.4,<4"
git = ">=2.47.1,<3"
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
pytest-randomly = ">=3.15.0,<4"
pytest-regressions = "*"
ruff = ">=0.9.6,<0.10"

[tool.pixi.feature.test.pypi-dependencies]
pytest-ruff = ">=0.4.1,<0.5"

[tool.pixi.feature.precommit.dependencies]
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.feature.docs.dependencies]
ipykernel = ">=6.29.5,<7"
kwant = ">=1.4"
myst-nb = ">=1.1.2,<2"
requests = "*"
scipy = ">=1.13"
sphinx-togglebutton = "*"
sphinx-copybutton = "*"
make = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinx-tippy = "*"
sphinx-book-theme = ">=1.1.0"

[tool.pixi.feature.minimal.dependencies]
python = "~=3.11"
numpy = ">=2.0"
scipy = "~=1.15.1"
kwant = "~=1.4"

[tool.pixi.feature.mid.dependencies]
python = "~=3.11"
numpy = ">=2.0"
scipy = "~=1.10"
kwant = "~=1.4"
pip = ">=26.0.1,<27"
python-mumps = "*"

[tool.pixi.feature.latest.dependencies]
python = "~=3.12"
numpy = ">=2.0"
scipy = ">=1.13"
kwant = ">=1.4"

[tool.pixi.feature.publish.dependencies]
hatch = ">=1.7.0,<1.13"
hatch-vcs = ">=0.4.0,<0.5"

[tool.pixi.feature.performance.dependencies]
pyinstrument = "*"
scipy = ">=1.13"

[tool.pixi.feature.performance.pypi-dependencies]
memray = "*"

[tool.pixi.pypi-dependencies]
meanfi = { path = ".", editable = true }
stateful-quadrature = ">=0.2.1"


[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "mid" }
performance = { features = ["performance", "mid"], solve-group = "mid" }
minimal = { features = ["minimal", "test"], solve-group = "minimal" }
mid = { features = ["mid", "test"], solve-group = "mid" }
latest = { features = ["latest", "test"], solve-group = "default" }
precommit = { features = ["precommit"], no-default-feature = true }
publish = { features = ["publish"], no-default-feature = true }
empty = { features = ["empty"], no-default-feature = true }
zip = { features = ["zip"], no-default-feature = true }

[tool.pixi.feature.test.tasks]
tests = { cmd = "pytest -m \"not performance and not perf_slow\" -W error -W ignore:ast.NameConstant:DeprecationWarning", env = { OPENBLAS_NUM_THREADS = "1", OMP_NUM_THREADS = "1", MKL_DYNAMIC = "FALSE", MKL_NUM_THREADS = "1" } }
tests-perf-slow = { cmd = "pytest -m \"perf_slow\" -W error -W ignore:ast.NameConstant:DeprecationWarning", env = { OPENBLAS_NUM_THREADS = "1", OMP_NUM_THREADS = "1", MKL_DYNAMIC = "FALSE", MKL_NUM_THREADS = "1" } }


[tool.pixi.tasks]
tests-minimal = "pixi run -e minimal tests"
tests-mid = "pixi run -e mid tests"
tests-latest = "pixi run -e latest tests"
tests-mid-perf-slow = "pixi run -e mid tests-perf-slow"
tests-all = { depends-on = ["tests-minimal", "tests-mid", "tests-latest"] }

[tool.pixi.feature.docs.tasks]
docs-build = { cmd = "python -c \"from matplotlib import pyplot\" && make -C docs/ html SPHINXOPTS=\"-WT --keep-going -n\"", env = { OPENBLAS_NUM_THREADS = "1", OMP_NUM_THREADS = "1", MKL_DYNAMIC = "FALSE", MKL_NUM_THREADS = "1" } }

[tool.pixi.feature.performance.tasks]
performance-density-scaling = "python -m performance.benchmarks.density_scaling --profile quick --output performance/results/density_scaling.json"
performance-density-scaling-manual = "python -m performance.benchmarks.density_scaling --profile full --output performance/results/manual/density_scaling.json --plot-dir performance/results/manual/plots"
performance-scf-scaling = "python performance/benchmarks/scf_scaling.py --output performance/results/scf_scaling.json"
performance-profile-density = "python -m memray run -o performance/results/hubbard_1d_density_profile.bin performance/profiling/hubbard_1d_density.py --output performance/results/hubbard_1d_density_profile.json && python -m memray stats performance/results/hubbard_1d_density_profile.bin"
performance-profile-scf = "python -m memray run -o performance/results/hubbard_1d_scf_profile.bin performance/profiling/hubbard_1d_scf.py --output performance/results/hubbard_1d_scf_profile.json && python -m memray stats performance/results/hubbard_1d_scf_profile.bin"
performance-profile-qwz-density = "python -m memray run -o performance/results/qiwuzhang_2d_density_profile.bin performance/profiling/qwz_2d_density.py --output performance/results/qiwuzhang_2d_density_profile.json && python -m memray stats performance/results/qiwuzhang_2d_density_profile.bin"

[tool.pixi.feature.precommit.tasks]
git = "git"
pre-commit = "pre-commit"

[tool.pixi.feature.publish.tasks]
build = "hatch build"
publish = "hatch publish -u __token__"

[tool.pixi.feature.zip.target.linux-64.dependencies]
zip = "*"

[tool.pixi.feature.zip.target.osx-64.dependencies]
zip = ">=3.0,<4"

[tool.pixi.feature.empty.system-requirements]
libc = { family = "unix", version = "0" }
